# usage-meter

./: CONTRIBUTING.md  PLAN.md  README.md  index.html  overlay.html  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx  main.tsx  overlay.css  overlay.entry.tsx  overlay.tsx
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  network_commands.rs  network_logger.rs  overlay.rs  tray.rs
src/components/: NetworkUsage.css  NetworkUsage.tsx
